Fix banner, replace x wrap with cover

--- a/css/templatemo-topic-listing.css
+++ b/css/templatemo-topic-listing.css
@@ -424,6 +424,8 @@ strong {
 .hero-section {
 	background-image: url(../images/fishes_background.jpg);
 	background-attachment: fixed;
+	background-size: cover !important;
+	background-position: center !important;
 	position: relative;
 	padding-top: 350px;
 	padding-bottom: 150px;
